	PR tree-optimization/20076 	* tree-inline.c (inline_forbidden_p_1): Prevent inlining functions 	that call __builtin_return or __builtin_apply_args.

* gcc.dg/builtin-apply4.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97653 138bc75d-0d04-0410-961f-82ee72b054a4